Replace deprecated wrapper constructors with valueOf() methods
Replace deprecated primitive wrapper constructors throughout the codebase:
- new Integer() -> Integer.valueOf()
- new Long() -> Long.valueOf()
- new Float() -> Float.valueOf()
- new Double() -> Double.valueOf()
- new Short() -> Short.valueOf()
- new Byte() -> Byte.valueOf()
- new Boolean(true/false) -> Boolean.TRUE/FALSE
- new Character() -> Character.valueOf()

Also replace deprecated Class.newInstance() with
getDeclaredConstructor().newInstance() in:
- OData4Impl.java
- TomcatTestServer.java

These constructors were deprecated in Java 9 and marked for removal.
Using valueOf() methods enables caching of common values and is the
recommended replacement.